wip: get client details

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.scss
@@ -1,10 +1,19 @@
+.form-heading {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
 .client-details-form {
   label {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 14px;
     line-height: 22px;
     color: var(--dark);
   }
+
   input,
   select {
     &::placeholder {
@@ -12,6 +21,46 @@
       font-size: 14px;
       line-height: 22px;
       color: #828d9e;
+    }
+  }
+}
+
+.service-type {
+  .form-check-input:checked[type='radio'] {
+    --bs-form-check-bg-image: url('/assets/icons/ellipse-off.svg');
+    &:checked {
+      --bs-form-check-bg-image: url('/assets/icons/ellipse-on.svg');
+      border: 1px solid var(--purple);
+    }
+    &:focus {
+      border-color: var(--purple);
+      outline: 0;
+      box-shadow: 0 0 0 0.25rem rgba(var(--purple-rgb), 0.25);
+    }
+  }
+}
+
+.consent {
+  .form-check-label {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: rgba(14, 28, 54, 0.75);
+  }
+  a {
+    color: rgba(14, 28, 54, 0.75);
+  }
+  .form-check-input {
+    &:checked {
+      background-color: rgba(var(--purple-rgb), 1);
+      border-color: transparent;
+      box-shadow: none;
+    }
+    &:focus {
+      border-color: var(--purple);
+      outline: 0;
+      box-shadow: 0 0 0 0.25rem rgba(var(--purple-rgb), 0.25);
     }
   }
 }
