wip:make quotation

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <label for="clientPhoneNumber">Phone Numbere</label>
+            <label for="clientPhoneNumber">Phone Number</label>
             <input type="text" class="form-control" id="clientPhoneNumber" placeholder="+254 06 34 73 99">
             <div class="invalid-feedback">
                 error
