--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -40,9 +40,22 @@
         </div> -->
 
         <!--quote validation-->
-        <div class="col-12 col-lg-5">
+        <div class="col-12 col-lg-6">
             <iq-quote-client-details></iq-quote-client-details>
         </div>
-        <div class="col-12 col-lg-5">Quote summary</div>
+        <div class="col-12 col-lg-6">Quote summary
+
+            <div class="row">
+                <div class="payment-options-header">Payment options</div>
+                <div class="payment-options-text">We support Visa, MasterCard, PayPal, M-Pesa Transfer and many other
+                    payment methods</div>
+                <div class="payment-options ps-3">
+                    <img src="assets/icons/money/visa.svg" alt="visa logo" class="img-fluid" width="80">
+                    <img src="assets/icons/money/paypal.svg" alt="paypal-logo" class="img-fluid" width="80">
+                    <img src="assets/icons/money/mastercard.svg" alt="mastercard-logo" class="img-fluid" width="80">
+                    <img src="assets/icons/money/mpesa.svg" alt="mpesa logo" class="img-fluid" width="80">
+                </div>
+            </div>
+        </div>
     </div>
 </main>
