--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
@@ -71,3 +71,28 @@ main {
   align-items: center;
   background-color: rgba(14, 28, 54, 0.1);
 }
+
+.payment-options-header {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  opacity: 0.8;
+  margin: 16px 0px;
+}
+.payment-options-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  opacity: 0.8;
+  margin-bottom: 16px;
+}
+
+.payment-options {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 24px;
+}
