--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -4,7 +4,7 @@
       <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" class="img-fluid" width="50" />
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 16px;">
         <li class="nav-item dropdown has-megamenu">
           <a class="nav-link px-0 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -40,26 +40,26 @@
               </a></li>
           </ul>
         </li>
-
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+        <li class="nav-item">
+          <a class="nav-link" href="#" role="button" aria-expanded="false">
             Resources
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Organizing Guide</a></li>
-            <li><a class="dropdown-item" href="#">Organizing Checklist</a></li>
-          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Blog</a>
+          <a class="nav-link" href="#" role="button" aria-expanded="false">
+            Pricing
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Gifts</a>
+          <a class="nav-link" href="#" role="button" aria-expanded="false">
+            Blog
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Store</a>
-        </li> -->
+          <a class="nav-link" href="#" role="button" aria-expanded="false">
+            Store
+          </a>
+        </li>
       </ul>
       <cff-language></cff-language>
     </div>
