--- a/libs/shared/header/src/lib/header/header.component.scss
+++ b/libs/shared/header/src/lib/header/header.component.scss
@@ -5,7 +5,7 @@ nav {
     border: 0;
     &:focus {
       outline: 0;
-      box-shadow: 0 0 0 0.25rem rgba(var(--accent-rgb), 0.25);
+      box-shadow: 0 0 0 0.25rem var(--purple-30);
     }
   }
   .primary-btn {
@@ -21,8 +21,8 @@ nav {
   }
 }
 .dropdown-item:active {
-  color: var(--dark);
-  background-color: var(--light);
+  color: var(--black-100);
+  background-color: var(--white-100);
 }
 .dropdown-item:focus-visible {
   outline: none;
@@ -32,7 +32,8 @@ nav {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.05em;
-  transition: border-bottom 1s ease-in-out;
+}
+.nav-link.dropdown-toggle {
   &::after {
     display: inline-block;
     margin-left: 0;
@@ -49,15 +50,13 @@ nav {
       margin-left: 4px;
       transition: margin-left 450ms ease-in-out;
     }
-    border-bottom: 1px solid var(--purple);
-    color: var(--purple);
+    border-bottom: 2px solid var(--purple-100);
+    color: var(--purple-100);
   }
 }
 .has-megamenu .dropdown-menu {
   border-color: transparent;
-  // position: absolute;
   width: 324px;
-  // display: flex;
   flex-direction: column;
   gap: 12px;
   padding: 10px 15px;
@@ -93,7 +92,7 @@ nav {
         font-weight: 400;
         font-size: 12px;
         line-height: 16px;
-        color: rgba(var(--dark), 0.8);
+        color: rgba(var(--black-100), 0.8);
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
