--- a/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.scss
@@ -15,7 +15,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-  color: rgba(var(--dark-rgb), 0.8);
+  color: var(--black-60);
   margin-bottom: 69px;
   max-width: 496px;
 }
