--- a/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.scss
+++ b/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.scss
@@ -12,7 +12,7 @@
   }
   &-rectangle {
     width: 7px;
-    background: #7a23d3;
+    background: var(--purple-100);
   }
   &-step-title {
     font-size: 24px;
@@ -27,7 +27,7 @@
     left: -260%;
     width: 46px;
     height: 46px;
-    background: #7a23d3;
+    background: var(--purple-100);
     border-radius: 50%;
     @media (max-width: 575px) {
       width: 35px;
@@ -53,7 +53,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: rgba(var(--dark), 0.9);
+    color: var(--black-60);
     opacity: 0.8;
     width: 302px;
     @media (max-width: 575px) {
