--- a/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.scss
+++ b/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.scss
@@ -19,7 +19,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 160%;
-    color: rgba(var(--dark-rgb), 0.8);
+    color: var(--black-60);
     opacity: 0.9;
     margin-bottom: 20px;
     @media (max-width: 768px) {
