--- a/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.scss
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.scss
@@ -19,7 +19,7 @@
     font-weight: 500;
     font-size: 32px;
     line-height: 56px;
-    color: var(--purple);
+    color: var(--purple-100);
     @media (max-width: 768px) {
       font-size: 24px;
     }
@@ -29,7 +29,7 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 140%;
-    color: rgba(var(--dark-rgb), 0.8);
+    color: var(--black-60);
   }
   &-content-title {
     font-weight: 600;
@@ -42,13 +42,13 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 140%;
-      color: rgba(var(--dark-rgb), 0.8);
+      color: var(--black-60);
     }
   }
   &-divider {
     width: 5px;
     height: 240px;
-    background: var(--purple);
+    background: var(--purple-100);
   }
 }
 .title-content {
