--- a/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.scss
@@ -6,7 +6,7 @@ section {
   font-weight: 700;
   font-size: 48px;
   line-height: 64px;
-  color: rgba(var(--dark-rgb), 0.8);
+  color: var(--black-60);
   text-align: center;
   margin-inline: auto;
   @media (max-width: 992.98px) {
@@ -18,7 +18,7 @@ section {
   row-gap: 16px;
 
   .accordion-item {
-    background: rgba(var(--purple-rgb), 0.07);
+    background: rgba(var(--purple-100-rgb), 0.07);
     border: none !important;
     border-radius: 16px;
     padding: 20px 10px;
@@ -29,7 +29,7 @@ section {
     font-size: 16px;
     line-height: 24px;
     border-radius: 16px;
-    color: rgba(var(--dark-rgb), 0.8);
+    color: var(--black-60);
     --bs-accordion-btn-icon: url(/assets/icons/expand_down.svg);
     --bs-accordion-btn-active-icon: url(/assets/icons/expand_down.svg);
     &.collapsed::after {
@@ -48,7 +48,7 @@ section {
   }
   .accordion-collapse.collapse.show {
     .accordion-body {
-      color: rgba(var(--dark-rgb), 0.75);
+      color: var(--black-60);
     }
   }
 }
