--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.scss
@@ -76,7 +76,7 @@
   }
 }
 .card-text-title {
-  color: rgba(var(--purple-rgb), 0.8) !important;
+  color: rgba(var(--purple-100-rgb), 0.8) !important;
   font-weight: 600;
   font-size: 10px;
   line-height: 140%;
@@ -91,7 +91,7 @@
   font-weight: 500;
   font-size: 9px;
   line-height: 160%;
-  color: rgba(var(--purple-rgb), 0.8) !important;
+  color: rgba(var(--purple-100-rgb), 0.8) !important;
   @media (max-width: 575.98px) {
     font-size: 5px;
   }
