--- a/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.scss
@@ -17,7 +17,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: rgba(var(--dark-rgb), 0.85);
+  color: var(--black-60)5);
   margin-bottom: 44px;
   max-width: 668px;
 }
