--- a/apps/website/mfe/src/app/pages/privacy-policy/sections/hero-section/hero-section.component.scss
+++ b/apps/website/mfe/src/app/pages/privacy-policy/sections/hero-section/hero-section.component.scss
@@ -1,5 +1,5 @@
 .bg-pattern {
-  background-color: var(--purple);
+  background-color: var(--purple-100);
   height: 100vh; /* set the height to 100% of the viewport */
   width: 100%; /* set the width to 100% of the viewport */
 }
