--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
@@ -17,7 +17,7 @@
         <div class="cff-v2-hero-section-list">
           <ng-container *ngFor="let item of [1, 2, 3, 4]">
             <div class="list-item d-flex align-items-center mb-3" style="column-gap: 6px;">
-              <div class="circle-check-green"> <img alt="clutter free finds services"
+              <div class="circle-check-yellow"> <img alt="clutter free finds services"
                   src="/assets/icons/check-light.svg" width="10" />
               </div>
               <span>
