--- a/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
@@ -39,7 +39,11 @@
         <div class="cff-v2-the-process-section-list">
           <ng-container *ngFor="let item of [1, 2, 3, 4]">
             <div class="list-item mb-3">
-              <img alt="clutter free finds services" src="/assets/icons/completed.svg" width="18" />
+              <div class="circle-check-purple">
+                <img alt="clutter free finds services circle-check-purple" src="/assets/icons/check-light.svg"
+                  width="10" />
+              </div>
+
               <span>
                 {{
                 'HOME_PAGE.THE_PROCESS.INTAKE_FORM.LIST.ITEM' + item
