--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -1,90 +1,79 @@
 <div class="form-heading">3. Service address</div>
 <div class="client-details-form">
     <div class="row">
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clienQuoteEmail">E-mail address</label>
             <input type="email" class="form-control" id="clienQuoteEmail" placeholder="example@gmail.com">
             <div class="invalid-feedback">
                 Enter a valid email
             </div>
         </div>
-        <div class="col-12 col-md-3 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clienFirstName">First name</label>
             <input type="text" class="form-control" id="clienFirstName" placeholder="First name">
             <div class="valid-feedback">
                 error
             </div>
         </div>
-        <div class="col-12 col-md-3 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clienLastName">Last name</label>
             <input type="text" class="form-control" id="clienLastName" placeholder="Last name">
             <div class="valid-feedback">
                 error
             </div>
         </div>
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clientPhoneNumber">Phone Number</label>
             <input type="text" class="form-control" id="clientPhoneNumber" placeholder="+254 06 34 73 99">
             <div class="invalid-feedback">
                 error
             </div>
         </div>
-        <div class="col-12 col-md-3 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteCounty">City / County</label>
-            <select class="form-select" aria-label="Default select example">
+            <select [disabled]="!(selectedCounty$ | async)" class="form-select" (change)="onCountySelect($event)">
                 <option selected disabled>County</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option [value]="county.countyCode" *ngFor="let county of counties">
+                    {{county.name}}</option>
             </select>
         </div>
-        <div class="col-12 col-md-3 mb-3">
+        <div class="col-12 col-md-4 mb-3">
+            <label for="clientQuoteConstituency">Constituency</label>
+            <select [disabled]="!(selectedConstituency$ | async)" class="form-select"
+                (change)="onConstituencyChange($event)">
+                <option selected disabled>Constituency</option>
+                <option [value]="constituency.name" *ngFor="let constituency of constituencies">
+                    {{constituency.name}}
+                </option>
+            </select>
+        </div>
+        <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteNeighbourhood">Neighborhood</label>
-            <select class="form-select" aria-label="Default select example">
+            <select [disabled]="!(selectedWard$ | async)" class="form-select" (change)="onWardChange($event)">
                 <option selected disabled>Neighborhood</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option [value]="ward" *ngFor="let ward of wards">
+                    {{ward}}
+                </option>
             </select>
         </div>
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteAddress">Address</label>
-            <input type="text" class="form-control" id="clientQuoteAddress" placeholder="House number, & street name">
+            <input type="text" class="form-control" id="clientQuoteAddress" placeholder="Apartment, street name">
             <div class="valid-feedback">
                 error!
             </div>
         </div>
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteHseNumber">House Number</label>
             <input type="text" class="form-control" id="clientQuoteHseNumber"
-                placeholder="Apartment, suite, unit, Hse. etc.">
+                placeholder="House Number, suite, unit, Hse. etc.">
             <div class="invalid-feedback">
                 error
             </div>
         </div>
     </div>
 </div>
-<div class="form-heading">4. Service Method</div>
-<div class="row service-type">
-    <div class="col-6">
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeHome" checked>
-            <label class="form-check-label" for="servicyTypeHome">
-                Home Service
-            </label>
-        </div>
-    </div>
-    <div class="col-6">
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeOnline">
-            <label class="form-check-label" for="servicyTypeOnline">
-                Online service
-            </label>
-        </div>
-    </div>
-</div>
-
-<div class="mt-5">
+<div class="mt-5 d-flex flex-column justify-content-center">
     <div class="form-check consent mb-3">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
         <label class="form-check-label" for="flexCheckChecked">
@@ -92,5 +81,5 @@
                 Agreement</a>
         </label>
     </div>
-    <button class="btn primary-btn w-100">Validate Quote</button>
+    <button class="btn primary-btn w-50">Validate Quote</button>
 </div>
