--- a/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.scss
@@ -18,7 +18,7 @@ section {
   row-gap: 16px;
 
   .accordion-item {
-    background: rgba(var(--purple-100-rgb), 0.07);
+    background: var(--purple-10);
     border: none !important;
     border-radius: 16px;
     padding: 20px 10px;
