--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -16,9 +16,10 @@
         </div>
         <div class="cff-v2-how-we-do-it-section-list" style="margin-bottom: 24px">
           <ng-container *ngFor="let item of [1, 2, 3, 4, 5, 6]">
-            <div class="list-item mb-3">
-              <img alt="clutter free finds services" src="/assets/icons/check-circle-clear.svg" width="24"
-                style="opacity: 0.5;" />
+            <div class="list-item d-flex align-items-center mb-3">
+              <div class="circle-check-yellow-30 d-flex align-items-center" style="gap: 8px;">
+                <img alt="clutter free finds services" src="/assets/icons/check-yellow.svg" width="24" />
+              </div>
               <span>
                 {{ 'HOME_PAGE.HOW_WE_DO_IT.LIST.ITEM' + item | translate }}
               </span>
