--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.scss
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.scss
@@ -16,7 +16,7 @@
 .cff-v2-how-we-do-it-section-description {
   font-weight: 400;
   opacity: 0.75;
-  color: var(--black-10);
+  color: var(--black-100);
   font-size: 18px;
   line-height: 160%;
   margin-bottom: 24px;
@@ -33,10 +33,11 @@
 }
 
 .list-item {
+  gap: 8px;
   font-size: 18px;
   line-height: 27px;
   opacity: 0.75;
-  color: var(--black-10);
+  color: var(--black-100);
   font-weight: 400;
   @media (max-width: 992.98px) {
     font-size: 12px;
