--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.scss
@@ -4,15 +4,15 @@
   border-radius: 8px;
   padding: 10px;
   .accordion-button {
-    background: rgba(var(--purple-rgb), 0.07);
-    color: var(--dark);
+    background: rgba(var(--purple-100-rgb), 0.07);
+    color: var(--black-100);
     border-radius: 8px;
 
     &::after {
       margin-left: 0 !important;
     }
     &.isActive {
-      color: var(--purple);
+      color: var(--purple-100);
       --bs-accordion-btn-active-icon: url('/assets/icons/check-circle-completed.svg');
       --bs-accordion-btn-icon: url('/assets/icons/check-circle-completed.svg');
     }
@@ -46,7 +46,7 @@
   }
   .accordion-collapse.collapse.show {
     .accordion-body {
-      color: rgba(var(--dark-rgb), 0.75);
+      color: var(--black-60);
       padding: 24px 0px;
     }
   }
@@ -59,13 +59,13 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
-    color: var(--dark);
+    color: var(--black-100);
   }
   .file-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: var(--dark);
+    color: var(--black-100);
   }
   input[type='file'] + label.cff-quote-info {
     display: flex;
@@ -101,7 +101,7 @@
   align-items: center;
   padding: 8px 16px;
   height: 37px;
-  background: var(--purple);
+  background: var(--purple-100);
   opacity: 0.8;
   border-radius: 32px;
 }
@@ -111,8 +111,8 @@ textarea {
   background: rgba(14, 28, 54, 0.05);
   border-radius: 8px;
   &:focus {
-    border-color: var(--purple);
+    border-color: var(--purple-100);
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(var(--purple-rgb), 0.25);
+    box-shadow: 0 0 0 0.25rem var(--purple-30);
   }
 }
