--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.scss
@@ -4,15 +4,15 @@
   border-radius: 8px;
   padding: 10px;
   .accordion-button {
-    background: rgba(var(--purple-rgb), 0.07);
-    color: var(--dark);
+    background: rgba(var(--purple-100-rgb), 0.07);
+    color: var(--black-100);
     border-radius: 8px;
 
     &::after {
       margin-left: 0 !important;
     }
     &.isActive {
-      color: var(--purple);
+      color: var(--purple-100);
       --bs-accordion-btn-active-icon: url('/assets/icons/check-circle-completed.svg');
       --bs-accordion-btn-icon: url('/assets/icons/check-circle-completed.svg');
     }
@@ -46,7 +46,7 @@
   }
   .accordion-collapse.collapse.show {
     .accordion-body {
-      color: rgba(var(--dark-rgb), 0.75);
+      color: var(--black-60);
       padding: 24px 0px;
     }
   }
@@ -55,7 +55,7 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 21px;
-  color: var(--dark);
+  color: var(--black-100);
 }
 .cff-materials {
   .form-select {
@@ -66,9 +66,9 @@
     border: 1px solid rgba(26, 111, 238, 0.1);
     border-radius: 16px;
     &:focus {
-      border-color: var(--purple);
+      border-color: var(--purple-100);
       outline: 0;
-      box-shadow: 0 0 0 0.25rem rgba(var(--purple-rgb), 0.25);
+      box-shadow: 0 0 0 0.25rem var(--purple-30);
     }
 
     option {
@@ -91,7 +91,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
-  color: var(--dark);
+  color: var(--black-100);
 }
 
 .material-container {
