--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.scss
@@ -4,15 +4,15 @@
   border-radius: 8px;
   padding: 10px;
   .accordion-button {
-    background: rgba(var(--purple-rgb), 0.07);
-    color: var(--dark);
+    background: var(--purple-10);
+    color: var(--black-100);
     border-radius: 8px;
 
     &::after {
       margin-left: 0 !important;
     }
     &.isActive {
-      color: var(--purple);
+      color: var(--purple-100);
       --bs-accordion-btn-active-icon: url('/assets/icons/check-circle-completed.svg');
       --bs-accordion-btn-icon: url('/assets/icons/check-circle-completed.svg');
     }
@@ -46,7 +46,7 @@
   }
   .accordion-collapse.collapse.show {
     .accordion-body {
-      color: rgba(var(--dark-rgb), 0.75);
+      color: var(--black-60);
       padding: 24px 0px;
     }
   }
@@ -71,7 +71,7 @@
     width: auto;
     height: 44px;
     border-radius: 24px;
-    background: #f6f6f6;
+    background-color: var(--black-10);
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -83,6 +83,6 @@
   }
 
   input[type='radio']:checked + label.cff-space {
-    background: rgba(var(--purple-rgb), 0.1);
+    background: rgba(var(--purple-100-rgb), 0.1);
   }
 }
